--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -82,3 +82,9 @@ If it's doing something dumb like directly attacking as a player, you can also s
 	- min, max, softcap amounts
 	- what the stat actually does (if it supports localized tooltips)
 	- what event it works on and it's priority
+
+- renamed mmorpg_dimension_config datapack to mmorpg_dimension to avoid confusion. just rename your folder if you used any
+same with mmorpg_entity_config > mmorpg_entity
+- added map_mob_list datapacks. 
+- added tags to map dungeon types. By default, all maps and all mob lists have a "default" tag meaning they can spawn anywhere
+But you're free to make say a mob list containing spiders spawn only in a spider forest dungeon, or maybe some modded mobs..?
