--- a/src/main/resources/assets/mmorpg/lang/en_us.json
+++ b/src/main/resources/assets/mmorpg/lang/en_us.json
@@ -614,18 +614,18 @@
 
 	"item.mmorpg.currency.affix_common_reroll": "Orb of New Beginnings",
 	"mmorpg.currency.affix_common_reroll": "Orb of New Beginnings",
-	"mmorpg.currency.affix_tier_up_down": "Orb of Imbalance",
 	"item.mmorpg.currency.affix_tier_up_down": "Orb of Imbalance",
-	"mmorpg.currency.chaos_orb": "Orb of Chaos",
+	"mmorpg.currency.affix_tier_up_down": "Orb of Imbalance",
 	"item.mmorpg.currency.chaos_orb": "Orb of Chaos",
-	"mmorpg.currency.entangled_affix_upgrade": "Entangled Orb of Upgrade",
+	"mmorpg.currency.chaos_orb": "Orb of Chaos",
 	"item.mmorpg.currency.entangled_affix_upgrade": "Entangled Orb of Upgrade",
+	"mmorpg.currency.entangled_affix_upgrade": "Entangled Orb of Upgrade",
 	"item.mmorpg.currency.entangled_potential": "Entangled Orb of Potential",
 	"mmorpg.currency.entangled_potential": "Entangled Orb of Potential",
-	"mmorpg.currency.entangled_quality": "Entangled Orb of Quality",
 	"item.mmorpg.currency.entangled_quality": "Entangled Orb of Quality",
-	"mmorpg.currency.entangled_unique_reroll": "Entangled Orb of Imperfection",
+	"mmorpg.currency.entangled_quality": "Entangled Orb of Quality",
 	"item.mmorpg.currency.entangled_unique_reroll": "Entangled Orb of Imperfection",
+	"mmorpg.currency.entangled_unique_reroll": "Entangled Orb of Imperfection",
 	"mmorpg.currency.jewel_corrupt": "Orb of Mesmerizing Chaos",
 	"item.mmorpg.currency.jewel_corrupt": "Orb of Mesmerizing Chaos",
 	"mmorpg.currency.level_up_orb": "Orb of Infinity",
@@ -638,30 +638,30 @@
 	"mmorpg.currency.mastery_seal1": "Celestial Mastery Seal",
 	"mmorpg.currency.mastery_seal2": "Empyrean Mastery Seal",
 	"item.mmorpg.currency.mastery_seal2": "Empyrean Mastery Seal",
-	"mmorpg.currency.mastery_seal3": "Angelic Mastery Seal",
 	"item.mmorpg.currency.mastery_seal3": "Angelic Mastery Seal",
+	"mmorpg.currency.mastery_seal3": "Angelic Mastery Seal",
 	"item.mmorpg.currency.mastery_seal4": "Divine Mastery Seal",
 	"mmorpg.currency.mastery_seal4": "Divine Mastery Seal",
-	"item.mmorpg.currency.mastery_seal5": "Godly Mastery Seal",
 	"mmorpg.currency.mastery_seal5": "Godly Mastery Seal",
-	"mmorpg.currency.orb_of_quality": "Orb of Quality",
+	"item.mmorpg.currency.mastery_seal5": "Godly Mastery Seal",
 	"item.mmorpg.currency.orb_of_quality": "Orb of Quality",
-	"item.mmorpg.currency.sharpening_stone0": "Spiritual Sharpening Stone",
+	"mmorpg.currency.orb_of_quality": "Orb of Quality",
 	"mmorpg.currency.sharpening_stone0": "Spiritual Sharpening Stone",
+	"item.mmorpg.currency.sharpening_stone0": "Spiritual Sharpening Stone",
 	"item.mmorpg.currency.sharpening_stone1": "Celestial Sharpening Stone",
 	"mmorpg.currency.sharpening_stone1": "Celestial Sharpening Stone",
 	"item.mmorpg.currency.sharpening_stone2": "Empyrean Sharpening Stone",
 	"mmorpg.currency.sharpening_stone2": "Empyrean Sharpening Stone",
-	"mmorpg.currency.sharpening_stone3": "Angelic Sharpening Stone",
 	"item.mmorpg.currency.sharpening_stone3": "Angelic Sharpening Stone",
+	"mmorpg.currency.sharpening_stone3": "Angelic Sharpening Stone",
 	"item.mmorpg.currency.sharpening_stone4": "Divine Sharpening Stone",
 	"mmorpg.currency.sharpening_stone4": "Divine Sharpening Stone",
-	"item.mmorpg.currency.sharpening_stone5": "Godly Sharpening Stone",
 	"mmorpg.currency.sharpening_stone5": "Godly Sharpening Stone",
+	"item.mmorpg.currency.sharpening_stone5": "Godly Sharpening Stone",
 	"mmorpg.currency.socket_adder": "Orb of Digging",
 	"item.mmorpg.currency.socket_adder": "Orb of Digging",
-	"item.mmorpg.currency.unique_reroll": "Orb of Imperfection",
 	"mmorpg.currency.unique_reroll": "Orb of Imperfection",
+	"item.mmorpg.currency.unique_reroll": "Orb of Imperfection",
 
 "_comment": " [CATEGORY]: CURRENCY ITEMS - NAMES",
 
@@ -1766,6 +1766,46 @@
 "_comment": " [CATEGORY]: FORMATTER - NAMES",
 
 
+"_comment": " [CATEGORY]: GEAR SLOTS - NAMES",
+
+	"mmorpg.gear_type.bow": "Bow",
+	"mmorpg.gear_type.cloth_boots": "Cloth Boots",
+	"mmorpg.gear_type.cloth_chest": "Cloth Chest",
+	"mmorpg.gear_type.cloth_helmet": "Cloth Helmet",
+	"mmorpg.gear_type.cloth_pants": "Cloth Pants",
+	"mmorpg.gear_type.crossbow": "Crossbow",
+	"mmorpg.gear_type.leather_boots": "Leather Boots",
+	"mmorpg.gear_type.leather_chest": "Leather Chest",
+	"mmorpg.gear_type.leather_helmet": "Leather Helmet",
+	"mmorpg.gear_type.leather_pants": "Leather Pants",
+	"mmorpg.gear_type.necklace": "Necklace",
+	"mmorpg.gear_type.plate_boots": "Plate Boots",
+	"mmorpg.gear_type.plate_chest": "Plate Chest",
+	"mmorpg.gear_type.plate_helmet": "Plate Helmet",
+	"mmorpg.gear_type.plate_pants": "Plate Pants",
+	"mmorpg.gear_type.ring": "Ring",
+	"mmorpg.gear_type.shield": "Tower Shield",
+	"mmorpg.gear_type.staff": "Staff",
+	"mmorpg.gear_type.sword": "Sword",
+	"mmorpg.gear_type.tome": "Tome",
+	"mmorpg.gear_type.totem": "Totem",
+	"mmorpg.gearslot.boots": "Boots",
+	"mmorpg.gearslot.bow": "Bow",
+	"mmorpg.gearslot.chest": "Chest",
+	"mmorpg.gearslot.crossbow": "Crossbow",
+	"mmorpg.gearslot.helmet": "Helmet",
+	"mmorpg.gearslot.necklace": "Necklace",
+	"mmorpg.gearslot.pants": "Pants",
+	"mmorpg.gearslot.ring": "Ring",
+	"mmorpg.gearslot.shield": "Shield",
+	"mmorpg.gearslot.staff": "Staff",
+	"mmorpg.gearslot.sword": "Sword",
+	"mmorpg.gearslot.tome": "Tome",
+	"mmorpg.gearslot.totem": "Totem",
+
+"_comment": " [CATEGORY]: GEAR SLOTS - NAMES",
+
+
 "_comment": " [CATEGORY]: UNIQUE ITEMS - NAMES",
 
 	"mmorpg.unique_gear.air_disaster.name": "Aria of Disaster",
@@ -1822,44 +1862,19 @@
 "_comment": " [CATEGORY]: UNIQUE ITEMS - NAMES",
 
 
-"_comment": " [CATEGORY]: GEAR SLOTS - NAMES",
+"_comment": " [CATEGORY]: STATPRIORITY - NAMES",
 
-	"mmorpg.gear_type.bow": "Bow",
-	"mmorpg.gear_type.cloth_boots": "Cloth Boots",
-	"mmorpg.gear_type.cloth_chest": "Cloth Chest",
-	"mmorpg.gear_type.cloth_helmet": "Cloth Helmet",
-	"mmorpg.gear_type.cloth_pants": "Cloth Pants",
-	"mmorpg.gear_type.crossbow": "Crossbow",
-	"mmorpg.gear_type.leather_boots": "Leather Boots",
-	"mmorpg.gear_type.leather_chest": "Leather Chest",
-	"mmorpg.gear_type.leather_helmet": "Leather Helmet",
-	"mmorpg.gear_type.leather_pants": "Leather Pants",
-	"mmorpg.gear_type.necklace": "Necklace",
-	"mmorpg.gear_type.plate_boots": "Plate Boots",
-	"mmorpg.gear_type.plate_chest": "Plate Chest",
-	"mmorpg.gear_type.plate_helmet": "Plate Helmet",
-	"mmorpg.gear_type.plate_pants": "Plate Pants",
-	"mmorpg.gear_type.ring": "Ring",
-	"mmorpg.gear_type.shield": "Tower Shield",
-	"mmorpg.gear_type.staff": "Staff",
-	"mmorpg.gear_type.sword": "Sword",
-	"mmorpg.gear_type.tome": "Tome",
-	"mmorpg.gear_type.totem": "Totem",
-	"mmorpg.gearslot.boots": "Boots",
-	"mmorpg.gearslot.bow": "Bow",
-	"mmorpg.gearslot.chest": "Chest",
-	"mmorpg.gearslot.crossbow": "Crossbow",
-	"mmorpg.gearslot.helmet": "Helmet",
-	"mmorpg.gearslot.necklace": "Necklace",
-	"mmorpg.gearslot.pants": "Pants",
-	"mmorpg.gearslot.ring": "Ring",
-	"mmorpg.gearslot.shield": "Shield",
-	"mmorpg.gearslot.staff": "Staff",
-	"mmorpg.gearslot.sword": "Sword",
-	"mmorpg.gearslot.tome": "Tome",
-	"mmorpg.gearslot.totem": "Totem",
+	"mmorpg.stat_priority.after_damage_bonuses": "AFTER_DAMAGE_BONUSES",
+	"mmorpg.stat_priority.before_damage_layers": "BEFORE_DAMAGE_LAYERS",
+	"mmorpg.stat_priority.before_hit_prevention": "BEFORE_HIT_PREVENTION",
+	"mmorpg.stat_priority.calc_damage_layers": "CALC_DAMAGE_LAYERS",
+	"mmorpg.stat_priority.damage_layers": "DAMAGE_LAYERS",
+	"mmorpg.stat_priority.data_modification": "DATA_MODIFICATION",
+	"mmorpg.stat_priority.final_damage": "FINAL_DAMAGE",
+	"mmorpg.stat_priority.first": "FIRST",
+	"mmorpg.stat_priority.hit_prevention": "HIT_PREVENTION",
 
-"_comment": " [CATEGORY]: GEAR SLOTS - NAMES",
+"_comment": " [CATEGORY]: STATPRIORITY - NAMES",
 
 
 "_comment": " [CATEGORY]: GEAR ITEMS - NAMES",
@@ -1875,21 +1890,6 @@
 	"item.mmorpg.weapon.staff.wood": "Staff",
 
 "_comment": " [CATEGORY]: GEAR ITEMS - NAMES",
-
-
-"_comment": " [CATEGORY]: STATPRIORITY - NAMES",
-
-	"mmorpg.stat_priority.after_damage_bonuses": "AFTER_DAMAGE_BONUSES",
-	"mmorpg.stat_priority.before_damage_layers": "BEFORE_DAMAGE_LAYERS",
-	"mmorpg.stat_priority.before_hit_prevention": "BEFORE_HIT_PREVENTION",
-	"mmorpg.stat_priority.calc_damage_layers": "CALC_DAMAGE_LAYERS",
-	"mmorpg.stat_priority.damage_layers": "DAMAGE_LAYERS",
-	"mmorpg.stat_priority.data_modification": "DATA_MODIFICATION",
-	"mmorpg.stat_priority.final_damage": "FINAL_DAMAGE",
-	"mmorpg.stat_priority.first": "FIRST",
-	"mmorpg.stat_priority.hit_prevention": "HIT_PREVENTION",
-
-"_comment": " [CATEGORY]: STATPRIORITY - NAMES",
 
 
 "_comment": " [CATEGORY]: STAT LAYER - NAMES",
@@ -2557,6 +2557,7 @@
 	"mmorpg.word.deletesallaffixes": "Deletes all affixes",
 	"mmorpg.word.destroysitem": "DESTROYS the Item",
 	"mmorpg.word.disabled": "Disabled",
+	"mmorpg.word.dmg_conflict_check": "Mod Conflict Check\n\nChecks if Mine and Slash damage has been overrided by another mod.\nSends a message to player if there's a problem.\n THIS IS A DEBUG OPTION",
 	"mmorpg.word.dmgmultiinfo": "Damage Multiplier. This is a multiplicative damage source",
 	"mmorpg.word.downgradeaffix": "Downgrades an affix",
 	"mmorpg.word.drag_no_work_creative": "Drag and Drop Interactions Do-NOT work in Creative Mode!",
