--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -96,3 +96,4 @@ But you're free to make say a mob list containing spiders spawn only in a spider
 v.5.5.5
 
 - spells not tagged as magic now add the caster's weapon type so the damage can benefit from "sword damage" for example
+- tweaked sound/anim of frost nova, chilling field
