--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -101,5 +101,7 @@ v.5.5.5
 - reduced mob hp scaling from rarity
 - added unsummon keybind 
 - changed armor and dodge formulas to be more sane.. and easily shown in tooltips (ill add a config if needed, formula still wip)
+- will autopickup salvaged stuff into master bagpack now
+
 
 todo check if my new default shift + x keybinds work
