--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -103,3 +103,11 @@ v.5.5.5
 - changed armor and dodge formulas to be more sane.. and easily shown in tooltips (ill add a config if needed, formula still wip)
 - will autopickup salvaged stuff into master bagpack now
 - fixed explode summons not exploding summons
+
+v.5.5.6
+- elemental resist reworked, it's now uncapped so you can protect against penetration by having more resist.
+The actual soft and hardcaps didn't change, it's still 75 and 90.
+This also means if mobs have resist above cap, it's now harder to penetrate their resists
+- attempt to improve spell projectiles
+- renamed ingame configs to features. Probably still need a better term for it. They're basically client configs but easily modifiable in the mns hub and are something players might want to edit multiple times per play session..
+- attempt to fix ailment supp gems by making attacker's stats proc on hit, and defender's stats proc when the dot ticks. This has a side effect of dot dmg being all "base dmg" so you won't see your dmg multipliers etc
