--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -117,3 +117,9 @@ Maximum dmg is 50% from it (per item). This should hopefully make vanilla stats 
 I say be cautious with compats, I'm not sure if for example fire protection should get any bonus stats. For one, it's already a useful enchant on its own to not die in fire or lava. And two, if it gave say fire resistance stat,
 then fire res would be easy to get, but not other resistances. So don't just try to add compat for everything, it can screw up balance or make players op pretty easily
 - should fix fire trap and some other spells crashing
+
+v.5.5.7
+- fix vanilla dmg leak when wep dmg is 0 on unarmed attack
+- changed drag and drop interactions to require a right mouse click now
+- fixed uber frags to be able to actually drop normally. (why did nobody report this? :()
+Basically frags only dropped in uber maps, but you can only normally get uber maps by combining the frags.
